<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="419dp"
        android:layout_height="742dp"
        android:src="@drawable/background_reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <EditText
        android:id="@+id/editTextUsernameReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/register_bg"
        android:ems="10"
        android:fontFamily="@font/mulish"
        android:hint="@string/username_reg"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingTop="@dimen/paddingTop"
        android:paddingRight="@dimen/paddingRight"
        android:paddingBottom="@dimen/paddingBottom"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFullNameReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/register_bg"
        android:ems="10"
        android:fontFamily="@font/mulish"
        android:hint="@string/full_name_reg"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingTop="@dimen/paddingTop"
        android:paddingRight="@dimen/paddingRight"
        android:paddingBottom="@dimen/paddingBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsernameReg" />

    <EditText
        android:id="@+id/editTextEnterPassReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/register_bg"
        android:ems="10"
        android:fontFamily="@font/mulish"
        android:hint="@string/password_reg"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingTop="@dimen/paddingTop"
        android:paddingRight="@dimen/paddingRight"
        android:paddingBottom="@dimen/paddingBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailReg" />

    <EditText
        android:id="@+id/editTextEmailReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/register_bg"
        android:ems="10"
        android:fontFamily="@font/mulish"
        android:hint="@string/email_reg"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingTop="@dimen/paddingTop"
        android:paddingRight="@dimen/paddingRight"
        android:paddingBottom="@dimen/paddingBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddressReg" />

    <EditText
        android:id="@+id/editTextAddressReg"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/register_bg"
        android:ems="10"
        android:fontFamily="@font/mulish"
        android:hint="@string/address_reg"
        android:inputType="textPostalAddress"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingTop="@dimen/paddingTop"
        android:paddingRight="@dimen/paddingRight"
        android:paddingBottom="@dimen/paddingBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneReg" />

    <EditText
        android:id="@+id/editTextPhoneReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/register_bg"
        android:ems="10"
        android:fontFamily="@font/mulish"
        android:hint="@string/phone_reg"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingTop="@dimen/paddingTop"
        android:paddingRight="@dimen/paddingRight"
        android:paddingBottom="@dimen/paddingBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFullNameReg" />

    <EditText
        android:id="@+id/editTextReEnterPassReg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/register_bg"
        android:ems="10"
        android:fontFamily="@font/mulish"
        android:hint="@string/re_enter_password_reg"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="@dimen/paddingLeft"
        android:paddingTop="@dimen/paddingTop"
        android:paddingRight="@dimen/paddingRight"
        android:paddingBottom="@dimen/paddingBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterPassReg" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="142dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/mulish_semibold"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextReEnterPassReg" />

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mulish_semibold"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsernameReg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>