<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editprofile" >

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/profile_info"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="370dp"
        android:layout_height="380dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="126dp" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/email"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/textView33" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/Contact_no"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/textView30" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/address"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/fullname"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView33"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/textView33"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView30"
                app:layout_constraintStart_toEndOf="@+id/textView30"
                app:layout_constraintTop_toTopOf="@+id/textView30"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView31"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="@+id/textView31"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView32"
                app:layout_constraintStart_toEndOf="@+id/textView32"
                app:layout_constraintTop_toTopOf="@+id/textView32"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/black"
        android:text="@string/edit"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
        app:layout_constraintTop_toTopOf="@+id/buttonCancel"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black"
        android:text="@string/Cancel"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView6" />
</androidx.constraintlayout.widget.ConstraintLayout>