<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckIn">

    <ImageView
        android:id="@+id/checkInPriBg"
        android:layout_width="411dp"
        android:layout_height="731dp"
        android:src="@drawable/primarybg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/checkInSecBg"
        android:layout_width="711dp"
        android:layout_height="371dp"
        android:layout_marginBottom="408dp"
        android:src="@drawable/secondarybg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854" />

    <ImageView
        android:id="@+id/checkInBush"
        android:layout_width="412dp"
        android:layout_height="195dp"
        android:src="@drawable/checkinbush"
        app:layout_constraintBottom_toBottomOf="@+id/checkInPriBg"
        app:layout_constraintEnd_toEndOf="@+id/checkInSecBg"
        app:layout_constraintStart_toStartOf="@+id/checkInSecBg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <ImageView
        android:id="@+id/notCheckedInStatus"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/notcheckedin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkInPriBg" />

    <ImageView
        android:id="@+id/checkInCard"
        android:layout_width="384dp"
        android:layout_height="182dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/checkinshape1"
        app:layout_constraintEnd_toEndOf="@+id/notCheckedInStatus"
        app:layout_constraintStart_toStartOf="@+id/notCheckedInStatus"
        app:layout_constraintTop_toBottomOf="@+id/notCheckedInStatus" />

    <ImageView
        android:id="@+id/checkInCard2"
        android:layout_width="384dp"
        android:layout_height="108dp"
        android:src="@drawable/checkinhistory"
        app:layout_constraintEnd_toEndOf="@+id/checkInCard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/checkInCard"
        app:layout_constraintTop_toBottomOf="@+id/checkInCard" />

    <Button
        android:id="@+id/buttonCheckIn"
        android:layout_width="173dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/chalk_red"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/checkin"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintEnd_toEndOf="@+id/checkInCard2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/checkInCard2"
        app:layout_constraintTop_toBottomOf="@+id/checkInCard2" />

    <Button
        android:id="@+id/buttonRewards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/chalk_red"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/rewardhist_click"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintBottom_toBottomOf="@+id/rewardDesc"
        app:layout_constraintEnd_toEndOf="@+id/checkInCard2"
        app:layout_constraintTop_toTopOf="@+id/rewardTitle"
        app:layout_constraintVertical_bias="0.684" />

    <ImageView
        android:id="@+id/rewardHistLogo"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/rewardhist_logo"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRewards"
        app:layout_constraintStart_toStartOf="@+id/checkInCard2"
        app:layout_constraintTop_toTopOf="@+id/buttonRewards" />

    <TextView
        android:id="@+id/rewardDesc"
        android:layout_width="258dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/mulish"
        android:text="@string/rewardhist_description"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/rewardTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rewardTitle"
        app:layout_constraintTop_toBottomOf="@+id/rewardTitle" />

    <TextView
        android:id="@+id/rewardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/rewardhist_title"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/checkInCard2"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="@+id/checkInCard2"
        app:layout_constraintTop_toBottomOf="@+id/checkInCard" />

    <Switch
        android:id="@+id/switchReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/reminder"
        app:layout_constraintBottom_toBottomOf="@+id/dailyTitle"
        app:layout_constraintEnd_toEndOf="@+id/checkInCard"
        app:layout_constraintTop_toTopOf="@+id/dailyTitle" />

    <TextView
        android:id="@+id/dailyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/daily_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/checkInCard"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="@+id/checkInCard"
        app:layout_constraintTop_toTopOf="@+id/checkInCard" />

    <TextView
        android:id="@+id/dailyDesc"
        android:layout_width="353dp"
        android:layout_height="36dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/mulish"
        android:text="@string/daily_description"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/dailyTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/dailyTitle"
        app:layout_constraintTop_toBottomOf="@+id/dailyTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>